@@ -23,7 +23,7 @@ Left              | Axis 1 low       | [a] 0 to -32767
 #
 
 
-  T A B L E   O F   C O N T E N T S  for joyd v0.2.1
+  T A B L E   O F   C O N T E N T S  for joyd v0.2.2
   =================================
 
   (no changes since 0.2.0)
