@@ -14,7 +14,7 @@
 .TP 0.5i
 .B "\\$1 "
 ..
-.TH JOYDRC 5 "May 25 2000" "v0.2.1"
+.TH JOYDRC 5 "Oct 11 2000" "v0.2.2"
 .SH NAME
 .B joydrc
 \- configuration file for the joystick daemon
@@ -127,7 +127,7 @@ and
 default values.
 .PP
 The last section is the
-.B [action]
+.B [actions]
 section. It binds the commands to the joystick. The lines are in the
 format
 .PP
