@@ -1,7 +1,7 @@
 /* joystick.h
  *
  * part of
- * joyd 0.2.1 2000-05-25
+ * joyd 0.2.2 2000-10-11
  *
  */
 
