@@ -3,7 +3,7 @@
  *
  *    this program is part of:
  *
- *    joyd 0.2.1   ---   The Joystick Daemon
+ *    joyd 0.2.2   ---   The Joystick Daemon
  *
  *    2000 (C) by Christian Garbs <mitch@uni.de>
  */
@@ -41,6 +41,7 @@
 
 /*  joyd 0.2.0 2000-04-22
  *  joyd 0.2.1 2000-05-25
+ *  joyd 0.2.2 2000-10-11
  *
  *  (no changes)
  */
